<resources>
    <string name="app_name">Pokemon Guess Game</string>
    <string name="app_description">Guess the Pokemon\'s name and earn points. Don\'t forget, after 3 mistakes the game ends! </string>
    <string name="retry_text">Your lives are gone! Do you want to try again?</string>
    <string name="start_button">Start</string>
    <string name="retry_button">Retry</string>
    <string name="guess_button">Guess</string>
    <string name="pokemon_image">Pokemon Image</string>
    <string name="guess_hint">Name of the Pokemon</string>
    <string name="life_string">Lives: %s </string>
    <string name="correct">Correct answer</string>
    <string name="wrong">Wrong answer</string>


</resources>